--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,20 @@ services:
     environment:
       - NGINX_PORT=80
     depends_on:
-      - thegame-api
+      - "thegame-api"
 
   thegame-api:
     build:
       context: server
       dockerfile: Dockerfile
     container_name: thegame-api
+    depends_on:
+      - "thegame-db"
     ports:
       - "9201:5050"
+
+  thegame-db:
+    image: mongo:latest
+    container_name: thegame-db
+    ports:
+      - "27000:27017"
