--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: thegame
     volumes:
       - ./client/vue/:/usr/share/nginx/html
+      - ./client/vue/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "9200:80"
     environment:
