--- a/client/vue/default.conf
+++ b/client/vue/default.conf
@@ -10,8 +10,8 @@ server {
         index  index.html index.htm;
     }
 
-    location /api {
-        proxy_pass http://thegame-api:5050/;
+    location /api/ {
+        proxy_pass http://thegame-api:9201/;
     }
 
     #error_page  404              /404.html;
