--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,4 +3,7 @@ Flask~=1.1.2
 Flask-Cors
 pymongo~=3.12.0
 schedule~=1.1.0
-marshmallow
+APScheduler~=3.8.1
+marshmallow~=3.14.0
+tzlocal==2.1
+marshmallow-enum==1.5.1
