--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,3 +1,16 @@
+version: "3.7"
+
+networks:
+        proxy-net:
+                name: ${PROXY_NET}
+                external: true
+        default-net:
+                name: ${DEFAULT_NET}
+                internal: true
+        default-ext-net:
+                name: ${DEFAULT_EXT_NET}
+                external: true
+
 services:
   thegame:
     image: nginx
@@ -13,6 +26,10 @@ services:
       API_CONTAINER: thegame-api
     depends_on:
       - thegame-api
+    networks:
+      - proxy-net
+      - default-net
+      - default-ext-net
     command: /bin/bash -c "envsubst < /etc/nginx/conf.d/thegame.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   thegame-api:
@@ -24,6 +41,10 @@ services:
       - "thegame-db"
     ports:
       - "9201:9201"
+    networks:
+      - proxy-net
+      - default-net
+      - default-ext-net
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
@@ -34,6 +55,10 @@ services:
     container_name: thegame-db
     ports:
       - "27017:27017"
+    networks:
+      - proxy-net
+      - default-net
+      - default-ext-net
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
