Finished Makefile; Finalized DEV and PROD Environment

--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -1,2 +1,5 @@
-MONGO_USERNAME=
-MONGO_PASSWORD=
+MONGO_USERNAME=db_user
+MONGO_PASSWORD=db_password
+PROXY_NET=default_proxy_net
+DEFAULT_EXT_NET=default_ext_net
+DEFAULT_NET=default_net
